--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,9 +70,11 @@ html, body{
   <tr>
     <td>
       <select id="select_voice" name="select_voice">
+        <!--
         <option value="01">1</option>
         <option value="03">3</option>
         <option value="04">4</option>
+        -->
       </select>
     </td>
     <td>
@@ -93,6 +95,7 @@ var uuid = generateUUID();
 var socketio = null;
 var idx = -1;
 var idxtexts = [];
+var last_timestamp_second = 0;
 
 var base_url = location.origin + '/';
 
@@ -102,6 +105,24 @@ $(function(){
 });
 
 function init(){
+  $('#select_voice').html( '' );
+  $.ajax({
+    type: 'GET',
+    url: '/files',
+    success: function( result ){
+      console.log( result );
+      if( result && result.status ){
+        for( var i = 0; i < result.files.length; i ++ ){
+          var opt = '<option value="' + result.files[i] + '">' + result.files[i] + '</option>';
+          $('#select_voice').append( opt );
+        }
+      }
+    },
+    error: function( e0, e1, e2 ){
+      console.log( e0, e1, e2 );
+    }
+  });
+
   //. 初期化を通知
   var msg = {
     uuid: uuid,
@@ -114,7 +135,7 @@ function init(){
   });
 
   socketio.on( 'event_client_view', function( evt ){
-    console.log( 'event_client_view', evt );
+    //console.log( 'event_client_view', evt );
     /*
     evt = {
       result_index: 1,
@@ -123,7 +144,14 @@ function init(){
           final: false,
           alternatives: [
             {
-              transcript: "xxx xxxx xx xxxxxx ..."
+              transcript: "xxx xxxx xx xxxxxx ...",
+              timestamps: [
+                [ "xxx", 15.55, 16.04 ],
+                [ "xxxx", 16.25, 16.6 ],
+                [ "xx", 16.6, 16.71 ],
+                [ "xxxxxx", 16.71, 17.21 ],
+                  :
+              ]
             }
           ]
         }
@@ -131,11 +159,14 @@ function init(){
     }
     */
 
-    var idxtext = { index: evt.result_index, text: evt.results[0].alternatives[0].transcript, final: evt.results[0].final };
+    var timestamps = evt.results[0].alternatives[0].timestamps;
+    var idxtext = { index: evt.result_index, text: evt.results[0].alternatives[0].transcript, timestamp_second: timestamps[timestamps.length-1][2], final: evt.results[0].final };
     idxtexts.push( idxtext );
+    //console.log( '0', last_timestamp_second, idxtexts );
+    if( last_timestamp_second == 0 ){
+      setTimeout( showNextText, 1000 );
+    }
   });
-
-  setInterval( showNextText, 750 );
 }
 
 function postAudio(){
@@ -149,7 +180,7 @@ function postAudio(){
   };
 
   var audio = '<audio controls autoplay>'
-    + '<source src="/' + voice + '.mp3" type="audio/mp3"/>'
+    + '<source src="/' + voice + '" type="audio/mp3"/>'
     + '</audio>';
   $('#audio_div').html( audio );
   $('#result_div').html( '' );
@@ -174,6 +205,7 @@ function postAudio(){
 }
 
 function showNextText(){
+  //console.log( '1', last_timestamp_second, idxtexts );
   if( idxtexts.length > 0 ){
     var idxtext = idxtexts[0];
     idxtexts.splice( 0, 1 );
@@ -187,6 +219,15 @@ function showNextText(){
     if( idxtext.final ){
       $('#result_p_'+idxtext.index).addClass( 'result_final' );
     }
+
+    last_timestamp_second = idxtext.timestamp_second;
+    if( idxtexts.length > 0 ){
+      var next_timestamp_second = idxtexts[0].timestamp_second;
+      var msec = ( next_timestamp_second - last_timestamp_second ) * 1000;
+      setTimeout( showNextText, msec );
+    }
+  }else{
+    last_timestamp_second = 0;
   }
 }
 
