--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,15 +70,18 @@ html, body{
   <tr>
     <td>
       <select id="select_voice" name="select_voice">
-        <!--
-        <option value="01">1</option>
-        <option value="03">3</option>
-        <option value="04">4</option>
-        -->
       </select>
     </td>
     <td>
       <input type="button" class="btn btn-xs btn-primary" id="post_btn" value="POST" onClick="postAudio();"/>
+    </td>
+    <td>
+      <form name="frm1" id="frm1" enctype="multipart/mixed">
+      <input type="file" id="voice" name="voice"/>
+      </form>
+    </td>
+    <td>
+      <input type="button" class="btn btn-xs btn-success" id="upload_btn" value="UPLOAD" onClick="uploadAudio();"/>
     </td>
   </tr>
 </table>
@@ -202,6 +205,29 @@ function postAudio(){
       }
     });
   }, 1000 );
+}
+
+function uploadAudio(){
+  var form = $('#frm1').get()[0];
+  var formData = new FormData( form );
+  formData.append( 'timestamp', ( new Date() ).getTime() );
+  formData.append( 'uuid', uuid );
+  $.ajax({
+    type: 'POST',
+    url: '/audio',
+    data: formData,
+    contentType: false,
+    processData: false,
+    success: function( data, dataType ){
+      //. 実際はずっと処理中になるので、しばらく結果はかえって来ない
+      console.log( data );
+    },
+    error: function( jqXHR, textStatus, errorThrown ){
+      console.log( textStatus + ': ' + errorThrown );
+    }
+  });
+
+  return false;
 }
 
 function showNextText(){
